--- a/coverpage.html
+++ b/coverpage.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Published URL:</span>
-                    <span class="info-value">[Your Website URL]</span>
+                    <span class="info-value">https://adha050-123.github.io/AIman-Adhs/</span>
                 </div>
             </div>
         </div>
